v1.10.x/connectors/database/salesforce/yaml.mdx
---
title: Run the Salesforce Connector Externally
description: Use YAML to configure Salesforce connector for metadata extraction from objects, fields, and dashboards.
slug: /connectors/database/salesforce/yaml
sidebarTitle: Run Externally
mode: "wide"
---
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import { CodePreview, ContentPanel, ContentSection, CodePanel } from '/snippets/components/CodePreview.jsx'
import IngestionSinkDef from '/snippets/connectors/yaml/ingestion-sink-def.mdx'
import WorkflowConfigDef from '/snippets/connectors/yaml/workflow-config-def.mdx'
import IngestionCli from '/snippets/connectors/yaml/ingestion-cli.mdx'
import PythonRequirements from '/snippets/connectors/python-requirements.mdx'
import ExternalIngestionDeployment from '/snippets/v1.10.x/connectors/external-ingestion-deployment.mdx'
import IngestionSink from '/snippets/connectors/yaml/ingestion-sink.mdx'
import WorkflowConfig from '/snippets/connectors/yaml/workflow-config.mdx'
import SourceConfigDef from '/snippets/connectors/yaml/database/source-config-def.mdx'
import SourceConfig from '/snippets/connectors/yaml/database/source-config.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/salesforce.webp'
name="Salesforce"
stage="PROD"
availableFeatures={["Metadata"]}
unavailableFeatures={["Query Usage", "Data Profiler", "Data Quality", "dbt", "Lineage", "Column-level Lineage", "Stored Procedures", "Owners", "Tags", "Sample Data", "Auto-Classification"]} />
In this section, we provide guides and references to use the Salesforce connector.
Configure and schedule Salesforce metadata and profiler workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
- [Enable Security](#securing-salesforce-connection-with-ssl-in-openmetadata)
<ExternalIngestionDeployment />
## Requirements
Following are the permissions you will require to fetch the metadata from Salesforce.
**API Access**: You must have the API Enabled permission in your Salesforce organization.
**Object Permissions**: You must have read access to the Salesforce objects that you want to ingest.
### Python Requirements
<PythonRequirements />
To run the Salesforce ingestion, you will need to install:
```bash
pip3 install "openmetadata-ingestion[salesforce]"
```
## Metadata Ingestion
All connectors are defined as JSON Schemas.
[Here](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/entity/services/connections/database/salesforceConnection.json)
you can find the structure to create a connection to Salesforce.
In order to create and run a Metadata Ingestion workflow, we will follow
the steps to create a YAML configuration able to connect to the source,
process the Entities if needed, and reach the OpenMetadata server.
The workflow is modeled around the following
[JSON Schema](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/metadataIngestion/workflow.json)
### 1. Define the YAML Config

This is a sample config for Salesforce:

<CodePreview>

<ContentPanel>

<ContentSection id={1} title="Source Configuration" lines="1-3">

Configure the source type and service name for your Salesforce connector.

</ContentSection>

<ContentSection id={2} title="Username" lines="7">

**username**: Username to connect to the Salesforce. This user should have the access as defined in requirements.

</ContentSection>

<ContentSection id={3} title="Password" lines="8">

**password**: Password to connect to Salesforce.

</ContentSection>

<ContentSection id={4} title="Security Token" lines="9">

**securityToken**: Salesforce Security Token is required to access the metadata through APIs. You can checkout [this doc](https://help.salesforce.com/s/articleView?id=sf.user_security_token.htm&type=5) on how to get the security token.

</ContentSection>

<ContentSection id={5} title="Organization ID" lines="10">

**Organization ID**: Salesforce Organization ID is the unique identifier for your Salesforce identity. You can check out [this doc](https://help.salesforce.com/s/articleView?id=000385215&type=1) on how to get the your Salesforce Organization ID.

<Tip>
**Note**: You need to provide `15` digit organization id in this section. for e.g. `00DIB000004nDEq`, which you can find by following the steps mentioned in above doc (`Salesforce dashboard->Setup->Company Profile->Company Information->Salesforce.com Organization Id`).
</Tip>

<Tip>
**Note**: If you want to access salesforce metadata without token(only by using organization id), you will need to setup your ip in trusted ip ranges. You can go (`Salesforce dashboard->Setup->Security->Network Access->Trusted IP Ranges`) to configure this. You can check [here](https://help.salesforce.com/s/articleView?id=sf.security_networkaccess.htm&type=5) to configure your ip in trusted ip ranges.
</Tip>

</ContentSection>

<ContentSection id={6} title="SObject Name" lines="11">

**sobjectName**: Specify the Salesforce Object Name in case you want to ingest a specific object.  If left blank, we will ingest all the Objects.

</ContentSection>

<ContentSection id={7} title="Salesforce API Version" lines="12">

**salesforceApiVersion**: Follow the steps mentioned [here](https://help.salesforce.com/s/articleView?id=000386929&type=1) to get the API version. Enter the numerical value in the field, For example `42.0`.

</ContentSection>

<ContentSection id={8} title="Salesforce Domain" lines="13">

**salesforceDomain**: When connecting to Salesforce, you can specify the domain to use for accessing the platform. The common domains include `login` and `test`, and you can also utilize Salesforce My Domain.

By default, the domain `login` is used for accessing Salesforce.

</ContentSection>

<ContentSection id={9} title="Connection Options" lines="14">

#### Advanced Configuration

**Connection Options (Optional)**: Enter the details for any additional connection options that can be sent to database during the connection. These details must be added as Key-Value pairs.

</ContentSection>

<ContentSection id={10} title="Connection Arguments" lines="15">

**Connection Arguments (Optional)**: Enter the details for any additional connection arguments such as security or protocol configs that can be sent to database during the connection. These details must be added as Key-Value pairs.

- In case you are using Single-Sign-On (SSO) for authentication, add the `authenticator` details in the Connection Arguments as a Key-Value pair as follows: `"authenticator" : "sso_login_url"`

</ContentSection>

<ContentSection id={11} title="Source Config" lines="18-61">

<SourceConfigDef />

</ContentSection>

<ContentSection id={12} title="Sink Configuration" lines="62-64">

<IngestionSinkDef />

</ContentSection>

<ContentSection id={13} title="Workflow Configuration" lines="65-81">

<WorkflowConfigDef />

</ContentSection>

</ContentPanel>

<CodePanel fileName="salesforce_config.yaml">

```yaml
source:
  type: salesforce
  serviceName: local_salesforce
  serviceConnection:
    config:
      type: Salesforce
      username: username
      password: password
      securityToken: securityToken
      organizationId: organizationId
      sobjectName: sobjectName
      salesforceApiVersion: "42.0"
      salesforceDomain: login
      # connectionOptions:
      #   key: value
      # connectionArguments:
      #   key: value
```

<SourceConfig />

<IngestionSink />

<WorkflowConfig />

</CodePanel>

</CodePreview>

<IngestionCli />
## Securing Salesforce Connection with SSL in OpenMetadata
To establish secure connections between OpenMetadata and Salesforce, navigate to the Advanced Config section. Here, you can provide the CA certificate used for SSL validation by specifying the `caCertificate`. Alternatively, if both client and server require mutual authentication, you'll need to use all three parameters: `ssl_key`, `ssl_cert`, and `ssl_ca`. In this case, `ssl_cert` is used for the client’s SSL certificate, `ssl_key` for the private key associated with the SSL certificate, and `ssl_ca` for the CA certificate to validate the server’s certificate.
```yaml
      sslConfig:
            caCertificate: "/path/to/ca_certificate"
            sslCertificate: "/path/to/your/ssl_cert"
            sslKey: "/path/to/your/ssl_key"
```
