v1.12.x/connectors/database/salesforce/yaml.mdx
---
title: Run the Salesforce Connector Externally
description: Use YAML to configure Salesforce connector for metadata extraction from objects, fields, and dashboards.
sidebarTitle: Run Externally
mode: "wide"
---
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import { CodePreview, ContentPanel, ContentSection, CodePanel } from '/snippets/components/CodePreview.jsx'
import IngestionSinkDef from '/snippets/connectors/yaml/ingestion-sink-def.mdx'
import WorkflowConfigDef from '/snippets/connectors/yaml/workflow-config-def.mdx'
import IngestionCli from '/snippets/connectors/yaml/ingestion-cli.mdx'
import PythonRequirements from '/snippets/connectors/python-requirements.mdx'
import ExternalIngestionDeployment from '/snippets/v1.12.x/connectors/external-ingestion-deployment.mdx'
import IngestionSink from '/snippets/connectors/yaml/ingestion-sink.mdx'
import WorkflowConfig from '/snippets/connectors/yaml/workflow-config.mdx'
import SourceConfigDef from '/snippets/connectors/yaml/database/source-config-def.mdx'
import SourceConfig from '/snippets/connectors/yaml/database/source-config.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/salesforce.webp'
name="Salesforce"
stage="PROD"
availableFeatures={["Metadata"]}
unavailableFeatures={["Query Usage", "Data Profiler", "Data Quality", "dbt", "Lineage", "Column-level Lineage", "Stored Procedures", "Owners", "Tags", "Sample Data", "Auto-Classification"]} />
In this section, we provide guides and references to use the Salesforce connector.
Configure and schedule Salesforce metadata and profiler workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
- [Enable Security](#securing-salesforce-connection-with-ssl-in-openmetadata)
<ExternalIngestionDeployment />
## Requirements
Following are the permissions you will require to fetch the metadata from Salesforce.
**API Access**: You must have the API Enabled permission in your Salesforce organization.
**Object Permissions**: You must have read access to the Salesforce objects that you want to ingest.
### Python Requirements
<PythonRequirements />
To run the Salesforce ingestion, you will need to install:
```bash
pip3 install "openmetadata-ingestion[salesforce]"
```
## Metadata Ingestion
All connectors are defined as JSON Schemas.
[Here](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/entity/services/connections/database/salesforceConnection.json)
you can find the structure to create a connection to Salesforce.
In order to create and run a Metadata Ingestion workflow, we will follow
the steps to create a YAML configuration able to connect to the source,
process the Entities if needed, and reach the OpenMetadata server.
The workflow is modeled around the following
[JSON Schema](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/metadataIngestion/workflow.json)
### 1. Define the YAML Config

This is a sample config for Salesforce:

<CodePreview>

<ContentPanel>

<ContentSection id={1} title="Source Configuration" lines="1-3">

Configure the source type and service name for your Salesforce connector.

</ContentSection>

<ContentSection id={2} title="Consumer Key" lines="8">

**consumerKey**: Salesforce Consumer Key (Client ID) for OAuth 2.0 authentication. Obtained from your Salesforce Connected App (External Client App) configuration. Provide this together with `consumerSecret` to authenticate via OAuth 2.0.

<Tip>
The OAuth flow used depends on the `salesforceDomain` value and which other fields are set:
- **Client credentials** (key/secret only): Works only with a **My Domain** value (e.g., `mycompany.my`). Does **not** work with `login` or `test`.
- **OAuth password flow**: Provide `consumerKey`/`consumerSecret` **and** `username`/`password` together. Works with `login` or `test`.
</Tip>

</ContentSection>

<ContentSection id={3} title="Consumer Secret" lines="9">

**consumerSecret**: Salesforce Consumer Secret (Client Secret) for OAuth 2.0 authentication. Obtained from your Salesforce Connected App (External Client App) configuration. Provide this together with `consumerKey` to authenticate via OAuth 2.0.

</ContentSection>

<ContentSection id={4} title="Username / Password" lines="10-12">

**username**, **password**: Required for the OAuth password flow when using `login` or `test` domain. Provide these together with `consumerKey`/`consumerSecret`.

**securityToken** (commented out): Triggers the legacy SOAP login branch in `simple-salesforce` instead of the OAuth password flow. Only use this if you are not providing `consumerKey`/`consumerSecret`.

<Warning>
**Important**: Salesforce is deprecating direct username/password API access. Migrate to OAuth 2.0 using a Connected App (External Client App) to avoid future disruption. See [Salesforce OAuth documentation](https://help.salesforce.com/s/articleView?id=xcloud.remoteaccess_authenticate.htm&type=5).
</Warning>

</ContentSection>

<ContentSection id={5} title="Organization ID" lines="15">

**organizationId**: Salesforce Organization ID is the unique identifier for your Salesforce identity. You can check out [this doc](https://help.salesforce.com/s/articleView?id=000385215&type=1) on how to get your Salesforce Organization ID.

<Tip>
**Note**: You need to provide the `15` digit organization id, for example, `00DIB000004nDEq`, which you can find by following the steps mentioned in the doc above (`Salesforce dashboard->Setup->Company Profile->Company Information->Salesforce.com Organization Id`).
</Tip>

<Tip>
**Note**: If you want to access salesforce metadata without a token (only by using organization id), you will need to set up your IP in trusted IP ranges. You can go (`Salesforce dashboard->Setup->Security->Network Access->Trusted IP Ranges`) to configure this. You can check [here](https://help.salesforce.com/s/articleView?id=sf.security_networkaccess.htm&type=5) to configure your IP in trusted IP ranges.
</Tip>

</ContentSection>

<ContentSection id={6} title="SObject Names" lines="16-17">

**sobjectNames**: List of Salesforce Object Names to ingest. If left empty, all objects will be ingested (subject to `tableFilterPattern`).

</ContentSection>

<ContentSection id={7} title="Database Name" lines="18">

**databaseName**: Optional name to give to the database in OpenMetadata. Defaults to `default` if left blank.

</ContentSection>

<ContentSection id={8} title="Salesforce API Version" lines="19">

**salesforceApiVersion**: The API version to use when connecting to Salesforce. The correct value depends on your authentication method:

- **OAuth 2.0 (password flow or client credentials)**: Use any current Salesforce-supported version, including `65.0` or higher.
- **Username / Password (Legacy)**: Use `64.0` or lower. Salesforce removed the SOAP `login()` endpoint in API version `65.0`, which the legacy username/password flow relies on — setting `65.0` or higher will cause login failures. Note that API versions `31.0` through `64.0` are also scheduled to be retired by Salesforce in mid-2027, so we recommend migrating to OAuth 2.0 before that date.

Follow the steps mentioned [here](https://help.salesforce.com/s/articleView?id=000386929&type=1) to find your org's API version.

<Tip>
The connector's default API version is `42.0`. For OAuth 2.0, we recommend setting a newer current version (for example, `59.0` or higher) for access to the latest Salesforce features. For the legacy Username/Password flow, keep it at `64.0` or lower to avoid login failures.
</Tip>

</ContentSection>

<ContentSection id={9} title="Salesforce Domain" lines="20">

**salesforceDomain**: When connecting to Salesforce, you can specify the domain to use for accessing the platform. The common domains include `login` and `test`, and you can also utilize Salesforce My Domain.

By default, the domain `login` is used for accessing Salesforce.

</ContentSection>

<ContentSection id={10} title="Connection Options" lines="21">

#### Advanced Configuration

**Connection Options (Optional)**: Enter the details for any additional connection options that can be sent to database during the connection. These details must be added as Key-Value pairs.

</ContentSection>

<ContentSection id={11} title="Connection Arguments" lines="23">

**Connection Arguments (Optional)**: Enter the details for any additional connection arguments such as security or protocol configs that can be sent to database during the connection. These details must be added as Key-Value pairs.

- In case you are using Single-Sign-On (SSO) for authentication, add the `authenticator` details in the Connection Arguments as a Key-Value pair as follows: `"authenticator" : "sso_login_url"`

</ContentSection>

<ContentSection id={12} title="Source Config" lines="25-68">

<SourceConfigDef />

</ContentSection>

<ContentSection id={13} title="Sink Configuration" lines="69-71">

<IngestionSinkDef />

</ContentSection>

<ContentSection id={14} title="Workflow Configuration" lines="72-88">

<WorkflowConfigDef />

</ContentSection>

</ContentPanel>

<CodePanel fileName="salesforce_config.yaml">

```yaml
source:
  type: salesforce
  serviceName: local_salesforce
  serviceConnection:
    config:
      type: Salesforce
      # OAuth 2.0 password flow (login/test domain) – consumerKey + consumerSecret + username + password
      consumerKey: consumerKey
      consumerSecret: consumerSecret
      username: username
      password: password
      # securityToken: securityToken  # Legacy SOAP flow only – omit when using OAuth password flow
      # Client credentials flow (My Domain only) – remove username/password above
      # and set salesforceDomain to your My Domain value (e.g. mycompany.my)
      organizationId: organizationId
      sobjectNames:
        - Account
      databaseName: salesforce
      salesforceApiVersion: "65.0"
      salesforceDomain: login
      # connectionOptions:
      #   key: value
      # connectionArguments:
      #   key: value
```

<SourceConfig />

<IngestionSink />

<WorkflowConfig />

</CodePanel>

</CodePreview>

<IngestionCli />
## Securing Salesforce Connection with SSL in OpenMetadata
To establish secure connections between OpenMetadata and Salesforce, navigate to the Advanced Config section. Here, you can provide the CA certificate used for SSL validation by specifying the `caCertificate`. Alternatively, if both client and server require mutual authentication, you'll need to use all three parameters: `ssl_key`, `ssl_cert`, and `ssl_ca`. In this case, `ssl_cert` is used for the client’s SSL certificate, `ssl_key` for the private key associated with the SSL certificate, and `ssl_ca` for the CA certificate to validate the server’s certificate.
```yaml
      sslConfig:
            caCertificate: "/path/to/ca_certificate"
            sslCertificate: "/path/to/your/ssl_cert"
            sslKey: "/path/to/your/ssl_key"
```
